--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "author": "samonxian",
   "files": [
-    "dist"
+    "lib"
   ],
   "main": "lib/index.js",
   "dependencies": {
