--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-project-info",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "author": "samonxian",
   "files": [
     "lib"
@@ -27,7 +27,9 @@
     "rimraf": "^3.0.2",
     "fs-extra": "^10.1.0",
     "cross-spawn": "7.0.3",
+    "cpy-cli": "^4.0.1",
     "vite": "^2.9.9",
+    "vite-plugin-build": "^0.3.2",
     "vitest": "^0.18.1",
     "typescript": "^4.7.4"
   },
@@ -38,10 +40,7 @@
     "lint-staged": "lint-staged --allow-empty",
     "commitlint": "commitlint --edit $1",
     "clean": "rimraf lib tsconfig.tsbuildinfo",
-    "tsc": "tsc --declarationDir lib",
-    "vite": "vite",
-    "build:file": "node ./scripts/buildFiles.js",
-    "build": "npm run clean && npm run tsc && npm run build:file",
+    "build": "npm run clean && vite build && cpy 'src/**/*.tpl' lib",
     "build:publish": "npm run build && npm publish"
   },
   "config": {
